force-app/main/default/objects/Cycle__c/fields/Abnormalities_in_Second_Born_Baby__c.field-meta.xml
<CustomField>
    <fullName>Abnormalities_in_Second_Born_Baby__c</fullName>
    <label>Abnormalities in Second Born Baby</label>
    <type>TextArea</type>
</CustomField>