force-app/main/default/objects/Cycle__c/fields/Abnormalities_in_Third_Born_Baby__c.field-meta.xml
<CustomField>
    <fullName>Abnormalities_in_Third_Born_Baby__c</fullName>
    <label>Abnormalities in Third Born Baby</label>
    <type>TextArea</type>
</CustomField>