force-app/main/default/objects/Cycle__c/fields/Active_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Active_Cycle__c</fullName>
    <formula>IF( TEXT(Status__c)  &lt;&gt; &quot;Closed&quot;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Cycle</label>
    <type>Checkbox</type>
</CustomField>