force-app/main/default/objects/Cycle__c/fields/Age_Birthday_Treating_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Age_Birthday_Treating_Doctor__c</fullName>
    <formula>TEXT( Patient__r.Age__c )&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp;TEXT(DAY(Patient__r.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Patient__r.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Patient__r.Birthdate))&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; Doctor_Initiating_Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age - Birthdate - Treating Doctor</label>
    <type>Text</type>
</CustomField>