force-app/main/default/objects/Cycle__c/fields/AMH__c.field-meta.xml
<CustomField>
    <fullName>AMH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1/5 Checkbox Options displayed when creating a new cycle</description>
    <label>AMH</label>
    <type>Checkbox</type>
</CustomField>