force-app/main/default/objects/Cycle__c/fields/AMH_Level__c.field-meta.xml
<CustomField>
    <fullName>AMH_Level__c</fullName>
    <label>AMH Level</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>