force-app/main/default/objects/Cycle__c/fields/Anaesthetic_Type__c.field-meta.xml
<CustomField>
    <fullName>Anaesthetic_Type__c</fullName>
    <label>Anaesthetic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedation</fullName>
            </value>
            <value>
                <fullName>Inhaled Analgesia</fullName>
            </value>
            <value>
                <fullName>Monitored Anesthesia Care</fullName>
            </value>
            <value>
                <fullName>General Anesthesia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>