force-app/main/default/objects/Cycle__c/fields/Anaesthetics_Notes__c.field-meta.xml
<CustomField>
    <fullName>Anaesthetics_Notes__c</fullName>
    <label>Anaesthetics Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>