force-app/main/default/objects/Cycle__c/fields/Biopsy_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Biopsy_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biopsy Event Created</label>
    <type>Checkbox</type>
</CustomField>