force-app/main/default/objects/Cycle__c/fields/Birthweight_of_First_Born_Baby__c.field-meta.xml
<CustomField>
    <fullName>Birthweight_of_First_Born_Baby__c</fullName>
    <label>Birthweight of First Born Baby</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>