force-app/main/default/objects/Cycle__c/fields/casesDetailsUrl__c.field-meta.xml
<CustomField>
    <fullName>casesDetailsUrl__c</fullName>
    <label>casesDetailsUrl</label>
    <type>Url</type>
</CustomField>