force-app/main/default/objects/Cycle__c/fields/Cell_Wash_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Cell_Wash_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cell Wash Event Created</label>
    <type>Checkbox</type>
</CustomField>