force-app/main/default/objects/Cycle__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Completed</fullName>
            </value>
            <value>
                <fullName>Claim not yet finalised</fullName>
            </value>
            <value>
                <fullName>Claim Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>