force-app/main/default/objects/Cycle__c/fields/Claim_Status_Display__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_Display__c</fullName>
    <formula>TEXT(Claim_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Status Display</label>
    <type>Text</type>
</CustomField>