force-app/main/default/objects/Cycle__c/fields/Clinic_Cycle_Being_Undertaken_At__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Cycle_Being_Undertaken_At__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic Cycle Being Undertaken At</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>