force-app/main/default/objects/Cycle__c/fields/Clinic_Cycle_Being_Undertaken_at_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Cycle_Being_Undertaken_at_Name__c</fullName>
    <formula>Clinic_Cycle_Being_Undertaken_At__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic Cycle Being Undertaken at Name</label>
    <type>Text</type>
</CustomField>