force-app/main/default/objects/Cycle__c/fields/Count_Valid_Cycle_Consents__c.field-meta.xml
<CustomField>
    <fullName>Count_Valid_Cycle_Consents__c</fullName>
    <label>Count Valid Cycle Consents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>