force-app/main/default/objects/Cycle__c/fields/Current_Day_of_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Current_Day_of_Cycle__c</fullName>
    <formula>DateVALUE(NOW()) - Day_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Day of Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>