force-app/main/default/objects/Cycle__c/fields/Cycle_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Cancelled_Date__c</fullName>
    <label>Cycle Cancelled Date</label>
    <type>Date</type>
</CustomField>