force-app/main/default/objects/Cycle__c/fields/Cycle_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Cancelled_Reason__c</fullName>
    <label>Cycle Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Non Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>