force-app/main/default/objects/Cycle__c/fields/Cycle_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Failed_Reason__c</fullName>
    <label>Cycle Failed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed Fert</fullName>
            </value>
            <value>
                <fullName>Failed OPU</fullName>
            </value>
            <value>
                <fullName>No Mature Eggs</fullName>
            </value>
            <value>
                <fullName>No Utilisation of Embryos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>