force-app/main/default/objects/Cycle__c/fields/Cycle_ID__c.field-meta.xml
<CustomField>
    <fullName>Cycle_ID__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>Cycle ID</label>
    <type>AutoNumber</type>
</CustomField>