force-app/main/default/objects/Cycle__c/fields/Cycle_not_proceeding_reason__c.field-meta.xml
<CustomField>
    <fullName>Cycle_not_proceeding_reason__c</fullName>
    <label>Cycle Not Proceeding Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conceived naturally</fullName>
            </value>
            <value>
                <fullName>Going elsewhere</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Relationship broken down</fullName>
            </value>
            <value>
                <fullName>Not ready</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>