force-app/main/default/objects/Cycle__c/fields/Cycle_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Outcome__c</fullName>
    <label>Cycle Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Contact</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <label>Not Proceeding</label>
            </value>
            <value>
                <fullName>Cycle Cancelled</fullName>
            </value>
            <value>
                <fullName>Freeze All</fullName>
            </value>
            <value>
                <fullName>No Transfer</fullName>
                <label>No Utilisation</label>
            </value>
            <value>
                <fullName>Not Pregnant</fullName>
            </value>
            <value>
                <fullName>Positive BHCG</fullName>
            </value>
            <value>
                <fullName>Clinical Pregnancy</fullName>
            </value>
            <value>
                <fullName>Live Birth</fullName>
            </value>
            <value>
                <fullName>Eggs Donated</fullName>
            </value>
            <value>
                <fullName>No Eggs Retrieved</fullName>
            </value>
            <value>
                <fullName>Egg Freeze Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>