force-app/main/default/objects/Cycle__c/fields/Cycle_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Protocol</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Task_Template__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Protocol Templates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>