force-app/main/default/objects/Cycle__c/fields/Cycle_Type_ANZARD__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_ANZARD__c</fullName>
    <label>Cycle Type ANZARD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Autologous: Female-male couple, single female, female-female couple</fullName>
            </value>
            <value>
                <fullName>2 = Non-autologous: Female-female couple</fullName>
            </value>
            <value>
                <fullName>3 = Non-autologous: Oocyte/embryo donation</fullName>
            </value>
            <value>
                <fullName>4 = Non-autologous: Oocyte recipient</fullName>
            </value>
            <value>
                <fullName>5 = Non-autologous: Embryo recipient</fullName>
            </value>
            <value>
                <fullName>6 = Surrogacy – intending parent(s): Oocyte/embryo provision</fullName>
            </value>
            <value>
                <fullName>7 = Surrogacy – gestational carrier: Transfer (or thawing with the intention of transfer)</fullName>
            </value>
            <value>
                <fullName>8 = Laboratory-only cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>