force-app/main/default/objects/Cycle__c/fields/Cycle_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Type Name</label>
    <type>Text</type>
</CustomField>