force-app/main/default/objects/Cycle__c/fields/Date_of_Embryo_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Embryo_Transfer__c</fullName>
    <label>Date of Embryo Transfer</label>
    <type>Date</type>
</CustomField>