force-app/main/default/objects/Cycle__c/fields/Date_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>Date_Report_Generated__c</fullName>
    <label>Date Report Generated</label>
    <type>Date</type>
</CustomField>