force-app/main/default/objects/Cycle__c/fields/Day_1_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 1 Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>