force-app/main/default/objects/Cycle__c/fields/Day_3_Embryo_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Embryo_Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 3  + Embryo Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>