force-app/main/default/objects/Cycle__c/fields/Denuding_Trimming_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Denuding_Trimming_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denuding/Trimming Event Created</label>
    <type>Checkbox</type>
</CustomField>