force-app/main/default/objects/Cycle__c/fields/Doctor_Initiating_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Initiating_Cycle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor Initiating Cycle</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycles Initiated</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>