force-app/main/default/objects/Cycle__c/fields/Doctor_Initiating_Cycle_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Initiating_Cycle_Name_Text__c</fullName>
    <formula>Doctor_Initiating_Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Initiating Cycle Name (Text)</label>
    <type>Text</type>
</CustomField>