force-app/main/default/objects/Cycle__c/fields/Doctor_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Doctor_is_Me__c</fullName>
    <formula>Doctor_Initiating_Cycle__r.Internal_Doctor_Linkage__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor is Me</label>
    <type>Checkbox</type>
</CustomField>