force-app/main/default/objects/Cycle__c/fields/Doctor_Undertaking_OPU__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Undertaking_OPU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Undertaking OPU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Internal_Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycles (Doctor Undertaking OPU)</relationshipLabel>
    <relationshipName>Cycles1</relationshipName>
    <type>Lookup</type>
</CustomField>