force-app/main/default/objects/Cycle__c/fields/DON_AGE__c.field-meta.xml
<CustomField>
    <fullName>DON_AGE__c</fullName>
    <label>DON_AGE</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>