force-app/main/default/objects/Cycle__c/fields/Donor_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Donor_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Cycle</label>
    <type>Checkbox</type>
</CustomField>