force-app/main/default/objects/Cycle__c/fields/Donor_Patinet__c.field-meta.xml
<CustomField>
    <fullName>Donor_Patinet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Patinet</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycles (Donor Patinet)</relationshipLabel>
    <relationshipName>Cycles1</relationshipName>
    <type>Lookup</type>
</CustomField>