force-app/main/default/objects/Cycle__c/fields/Egg_Freeze_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Egg_Freeze_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Egg Freeze Event Created</label>
    <type>Checkbox</type>
</CustomField>