force-app/main/default/objects/Cycle__c/fields/Egg_Thaw_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Egg_Thaw_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Egg Thaw Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>