force-app/main/default/objects/Cycle__c/fields/Embryo_Vitrification_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Vitrification_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embryo Vitrification Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>