force-app/main/default/objects/Cycle__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <label>Estimated Delivery Date (EDD)</label>
    <type>Date</type>
</CustomField>