force-app/main/default/objects/Cycle__c/fields/Expected_Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sperm_Source__c</fullName>
    <label>Expected Sperm Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Clinic Donor</fullName>
            </value>
            <value>
                <fullName>Known Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>