force-app/main/default/objects/Cycle__c/fields/Fert_Event_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Fert_Event_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fert Event Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>