force-app/main/default/objects/Cycle__c/fields/Fertility_Preservation_Typpe__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Preservation_Typpe__c</fullName>
    <label>Fertility Preservation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Medical reason – Cancer diagnosis</fullName>
            </value>
            <value>
                <fullName>2 = Medical reason – other</fullName>
            </value>
            <value>
                <fullName>3 = Non-medical reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>