force-app/main/default/objects/Cycle__c/fields/Filgrastim__c.field-meta.xml
<CustomField>
    <fullName>Filgrastim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filgrastim</label>
    <type>Checkbox</type>
</CustomField>