force-app/main/default/objects/Cycle__c/fields/First_Born_Date_of_Neonatal_Death__c.field-meta.xml
<CustomField>
    <fullName>First_Born_Date_of_Neonatal_Death__c</fullName>
    <label>First-Born Date of Neonatal Death</label>
    <type>Date</type>
</CustomField>