force-app/main/default/objects/Cycle__c/fields/First_FSH_Cycle__c.field-meta.xml
<CustomField>
    <fullName>First_FSH_Cycle__c</fullName>
    <label>First FSH Cycle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>