force-app/main/default/objects/Cycle__c/fields/Fourth_Born_Date_of_Neonatal_Death__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Born_Date_of_Neonatal_Death__c</fullName>
    <label>Fourth-Born Date of Neonatal Death</label>
    <type>Date</type>
</CustomField>