force-app/main/default/objects/Cycle__c/fields/Freeze_All__c.field-meta.xml
<CustomField>
    <fullName>Freeze_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freeze All</label>
    <type>Checkbox</type>
</CustomField>