force-app/main/default/objects/Cycle__c/fields/Freeze_All_Options__c.field-meta.xml
<CustomField>
    <fullName>Freeze_All_Options__c</fullName>
    <label>Freeze All Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>