force-app/main/default/objects/Cycle__c/fields/Freeze_All_Reason__c.field-meta.xml
<CustomField>
    <fullName>Freeze_All_Reason__c</fullName>
    <label>Freeze All Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PGT</fullName>
            </value>
            <value>
                <fullName>Non-PGT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>