force-app/main/default/objects/Cycle__c/fields/Freeze_Date_of_Embryos__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Date_of_Embryos__c</fullName>
    <label>Freeze Date of Embryos</label>
    <summarizedField>Cycle_Event__c.Event_Date_and_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Cycle_Event__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Embryo Vitrification Event</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>