force-app/main/default/objects/Cycle__c/fields/FSH_Count__c.field-meta.xml
<CustomField>
    <fullName>FSH_Count__c</fullName>
    <label>FSH Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>