force-app/main/default/objects/Cycle__c/fields/FSH_Y_N__c.field-meta.xml
<CustomField>
    <fullName>FSH_Y_N__c</fullName>
    <formula>IF(FSH_Count__c = 0, &quot;n&quot;, IF(FSH_Count__c &gt;= 1, &quot;y&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSH Y/N</label>
    <type>Text</type>
</CustomField>