force-app/main/default/objects/Cycle__c/fields/Initial_Cyro_Date_of_Thawed_Eggs__c.field-meta.xml
<CustomField>
    <fullName>Initial_Cyro_Date_of_Thawed_Eggs__c</fullName>
    <label>Initial Cyro Date of Thawed Eggs</label>
    <type>Date</type>
</CustomField>