force-app/main/default/objects/Cycle__c/fields/Is_Cycle_for_Fertility_Preservation__c.field-meta.xml
<CustomField>
    <fullName>Is_Cycle_for_Fertility_Preservation__c</fullName>
    <label>Is Cycle for Fertility Preservation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_1_No_2_Yes</valueSetName>
    </valueSet>
</CustomField>