force-app/main/default/objects/Cycle__c/fields/IVF__c.field-meta.xml
<CustomField>
    <fullName>IVF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1/5 Checkbox Options displayed when creating a new cycle</description>
    <label>IVF</label>
    <type>Checkbox</type>
</CustomField>