force-app/main/default/objects/Cycle__c/fields/Karyotype_Partner__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_Partner__c</fullName>
    <label>Karyotype Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>