force-app/main/default/objects/Cycle__c/fields/Karyotype_Patient__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_Patient__c</fullName>
    <label>Karyotype Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>