force-app/main/default/objects/Cycle__c/fields/LPS__c.field-meta.xml
<CustomField>
    <fullName>LPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPS</label>
    <type>Checkbox</type>
</CustomField>