force-app/main/default/objects/Cycle__c/fields/Medicare_Claimable__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Claimable__c</fullName>
    <label>Medicare Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Medicare Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>