force-app/main/default/objects/Cycle__c/fields/Mutation_Partner__c.field-meta.xml
<CustomField>
    <fullName>Mutation_Partner__c</fullName>
    <label>Mutation Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>