force-app/main/default/objects/Cycle__c/fields/Mutation_Patient__c.field-meta.xml
<CustomField>
    <fullName>Mutation_Patient__c</fullName>
    <label>Mutation Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>