force-app/main/default/objects/Cycle__c/fields/Number_of_Babies_Born__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Babies_Born__c</fullName>
    <label>Number of Babies Born</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>